# PyMastery

./: .gitignore  Pipfile  README.md  app.py  fibonacci.py  other.py  pyproject.toml  rectangles.py  shapes.py
advanced_concepts/: file_content.py
challenge/: code_interviews.py  fibonacci.py  parentheses_parser.py  parser.py  rectangles.py  xifo.py
concurrency/: README.md
concurrency-models/: README.md
concurrency-models/eventloop(asyncio)/: README.md  even-odd-example.py
concurrency-models/eventloop(asyncio)/src/: future.py  synchronization.py  tasks.py
concurrency/eventloop(asyncio)/: README.md  concurrent_tasks.py  example.py
concurrency/eventloop(asyncio)/src/: couroutines  eventloop.py  tasks.py
decorators/: script.py
dunders/: main.py  script.py
encapsulation/: main.py
generators/: example.py  example_1.py  example_2.py  example_3.py  script.py
lambda/: main.py
patterns/: Singleton.py  __init__.py  chain_of_responsibility.py  factory.py  mediator.py  observer.py  state.py
python-cplusplus/: README.md  client_code.py  main.cpp
python_dunders/: script.py
resources/: expression.txt  sample.txt
src/: rectangles.py
store/: dbapi.py  main.py  orm.py
templates/: generators.py
tests/: test_code.py  test_fake_object.py  test_parameterization.py  test_patch.py  test_stub.py  usecases.py
tests/test_doubles/: __init__.py  test_fake_object.py  test_mocks.py  test_stub.py
utils/: async.py  snippets.py
