[project]
name = "pymastery"
version = "0.1.0"
description = "An evolving lab of advanced Python experiments, built to sharpen skills and share mastery"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "memory-profiler>=0.61.0",
    "opencv-python>=4.12.0.88",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
